--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ES6",
+    "module": "commonjs",
+    "target": "es6",
     "jsx": "preserve",
     "checkJs": true
   },
