--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es6",
     "jsx": "preserve",
-    "checkJs": true
+    "checkJs": false,
+    
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
