--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
+    "module": "ES6",
     "jsx": "preserve",
-    "checkJs": false,
-    
+    "checkJs": false
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
